Fix gitignore and remove target folder